Long school names are word-wrapped correctly

--- a/source/styles/main/b_page_in.scss
+++ b/source/styles/main/b_page_in.scss
@@ -35,7 +35,6 @@
   max-width: 315px;
   padding-top: 70px;
   text-align: center;
-  word-break: break-all;
 }
 .eSchoolBlazon {
   margin: 0 auto;
